<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quiz_activity"
    android:padding="16dp"
    android:background="@drawable/background_image">

    <TextView
        android:id="@+id/score"
        android:layout_width="79dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:freezesText="true"
        android:text="@string/score"
        android:textColor="@color/ActivityText4"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/outOf"
        android:layout_width="109dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/score"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:freezesText="true"
        android:text="@string/QuestionNumber"
        android:textColor="@color/ActivityText4"
        android:textSize="24sp">

    </TextView>

    <TextView
        android:id="@+id/q_timer"
        android:layout_width="103dp"
        android:layout_height="72dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:freezesText="true"
        android:text="@string/Timer"
        android:textColor="@color/ActivityText4"
        android:textSize="40sp">

    </TextView>

    <TextView
        android:id="@+id/text_view_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/radio_group"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/my"
        android:freezesText="true"
        android:gravity="center_horizontal"
        android:text="@string/GuidlineDescription2"
        android:textAlignment="center"
        android:textColor="@color/ActivityText4"
        android:textSize="20sp">

    </TextView>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radionButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option1"/>

        <RadioButton
            android:id="@+id/radionButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/option2" />

        <RadioButton
            android:id="@+id/radionButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/option3" />

        <RadioButton
            android:id="@+id/radionButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/option4" />
    </RadioGroup>

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_border"
        android:freezesText="true"
        android:text="@string/confirm"
        android:textSize="18sp" />


</RelativeLayout>