<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".Activity_quiz">

    <Button
        android:id="@+id/button"
        android:layout_width="199dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="08dp"
        android:padding="10dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/user_profile_logout"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/user_profile_logout"
        android:onClick="Level_selection"
        android:text="@string/quiz_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/BharatiScript_logo"
        android:layout_width="164dp"
        android:layout_height="132dp"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/quiz_logo" />

    <TextView
        android:id="@+id/guidlines1"
        android:layout_width="313dp"
        android:layout_height="21dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/GuidlineDescription2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidlines2" />

    <TextView
        android:id="@+id/guidlines2"
        android:layout_width="313dp"
        android:layout_height="21dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/GuidlineDescription1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidlines" />

    <TextView
        android:id="@+id/guidlines3"
        android:layout_width="353dp"
        android:layout_height="19dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/GuidlineDescription3"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidlines1" />

    <TextView
        android:id="@+id/guidlines4"
        android:layout_width="333dp"
        android:layout_height="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/GuidlineDescription4"
        android:textColor="#F44336"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidlines3" />

    <TextView
        android:id="@+id/guidlines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Guidline"
        android:textColor="#040404"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BharatiScript_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:textColor="#20CA30"
        android:textSize="24sp"
        android:text="@string/passing_marks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidlines4" />

</androidx.constraintlayout.widget.ConstraintLayout>