<?xml version="1.0" encoding="utf-8"?>
   <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".study_languages"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
     <TextView
         android:id="@+id/language_name"
         android:layout_width="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="30dp"
         android:layout_height="wrap_content"
         android:textSize="18sp"
         android:layout_gravity="center"
         android:textColor="@color/ActivityText4"
         android:text="@string/BharatiScript"/>

     <ImageView
         android:id="@+id/language1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/todo"
         app:srcCompat="@drawable/lang2" />

     <TextView
         android:id="@+id/Online_collection"
         android:layout_width="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         android:layout_height="wrap_content"
         android:textSize="18sp"
         android:layout_gravity="center"
         android:textColor="@color/ActivityText4"
         android:text="@string/Online_data"/>

     <TextView
         android:id="@+id/Bharati_Primers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="15dp"
         android:clickable="true"
         android:focusable="true"
         android:text="@string/Bharati_primers"
         android:textColor="@color/colorAccent"
         android:textSize="18sp" />

     <TextView
         android:id="@+id/language_books"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:layout_marginBottom="20dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="1dp"

         android:clickable="true"
         android:linksClickable="true"
         android:text="@string/bharati_books"
         android:textColor="@color/colorAccent"
         android:textSize="18sp" />

    </LinearLayout>
    </ScrollView>
</RelativeLayout>