<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_bhartiScript">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/activity_1_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/activity_1_logo" />
        <TextView
            android:id="@+id/activity_descri"
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/ActivityText4"
            android:text="@string/Activity1_text"/>

            <TextView
                android:id="@+id/activity_drop_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/study_material"

                android:textColor="@color/ActivityText4"
                android:textSize="24sp"
                android:textStyle="bold" />
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:entries="@array/languages"/>
            <Button
                android:id="@+id/continue_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="language_study"
                android:layout_gravity="center"
                android:text="@string/confirm"
                android:background="@drawable/round_border">

            </Button>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
