<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".certificates">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="212dp"
        android:layout_height="179dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/quiz_logo" />

    <TextView
        android:id="@+id/certificate_format"
        android:layout_width="311dp"
        android:layout_height="93dp"
        android:layout_marginTop="84dp"
        android:text="@string/Thank_you"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/certificate_logout"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/round_bg"
        android:drawablePadding="16dp"

        android:padding="16dp"
        android:text="@string/logout"
        app:drawableLeftCompat="@drawable/user_profile_logout"
        app:drawableStartCompat="@drawable/user_profile_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/certificate_format" />

    <Button
        android:id="@+id/certificate_share"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/round_bg"
        android:drawablePadding="16dp"

        android:onClick="export"
        android:padding="16dp"
        android:text="@string/share"
        app:drawableLeftCompat="@drawable/ic_baseline_share_24"
        app:drawableStartCompat="@drawable/ic_baseline_share_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/certificate_format" />

</androidx.constraintlayout.widget.ConstraintLayout>